[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/ChoiceNodeBox.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_tree_creator/EditorGUI/DialogueTreeEditor/ChoiceNode.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_tree_creator/Assets/plusSymbol.png" type="Texture" id=3]

[node name="ChoiceNode" type="GraphNode"]
margin_right = 418.0
margin_bottom = 310.0
mouse_filter = 1
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 402.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="AddLink" type="HSplitContainer" parent="."]
margin_left = 16.0
margin_top = 284.0
margin_right = 402.0
margin_bottom = 304.0
collapsed = true
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AddLink"]
margin_top = 3.0
margin_right = 366.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Add Choice Link:"

[node name="AddLinkButton" type="TextureButton" parent="AddLink"]
margin_left = 366.0
margin_right = 386.0
margin_bottom = 20.0
texture_normal = ExtResource( 3 )

[connection signal="close_request" from="." to="." method="_on_ChoiceNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_ChoiceNode_resize_request"]
[connection signal="focus_entered" from="TextEdit" to="TextEdit" method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="TextEdit" to="TextEdit" method="_on_TextEdit_focus_exited"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="AddLink/AddLinkButton" to="." method="_on_AddLinkButton_pressed"]
